--- a/GemTD-Site/pillar.conf
+++ b/GemTD-Site/pillar.conf
@@ -1,7 +1,7 @@
 {
 #'baseurl allows ecstatic to prefix urls. This is useful for e.g. github deployment': #comment,
 #'  "baseurl" : "/mySite",  ': #comment,
-	"baseurl" : "/Website",
+	"baseurl" : "",
 
 #'Basic website meta-data. Used by the different templates to fill-out information and page metas': #comment,
 	"site_name": "Dota 2 Gem TD Unofficial Website",
@@ -13,13 +13,13 @@
 #'Describing the sites menu as title,url pair': #comment,
 	"menu" : [
 		{ "title" : "Home",
-		  "url" : "/index.html"},
+		  "url" : "Website/index.html"},
 		{"title" : "Base Towers",
-		  "url" : "/baseTowers.html"},
+		  "url" : "Website/baseTowers.html"},
 		{"title" : "Advanced Towers",
-		  "url" : "/advancedTowers.html"},
+		  "url" : "Website/advancedTowers.html"},
 		{"title" : "Creeps",
-		  "url" : "/creeps.html"}
+		  "url" : "Website/creeps.html"}
 	],
 
 #'Disqus Id for the blog engine': #comment,
