update links again

--- a/GemTD-Site/pillar.conf
+++ b/GemTD-Site/pillar.conf
@@ -13,13 +13,13 @@
 #'Describing the sites menu as title,url pair': #comment,
 	"menu" : [
 		{ "title" : "Home",
-		  "url" : "Website/index.html"},
+		  "url" : "index.html"},
 		{"title" : "Base Towers",
-		  "url" : "Website/baseTowers.html"},
+		  "url" : "baseTowers.html"},
 		{"title" : "Advanced Towers",
-		  "url" : "Website/advancedTowers.html"},
+		  "url" : "advancedTowers.html"},
 		{"title" : "Creeps",
-		  "url" : "Website/creeps.html"}
+		  "url" : "creeps.html"}
 	],
 
 #'Disqus Id for the blog engine': #comment,
